# minesweeper

./: .gitignore  CMakeLists.txt  README.md
include/: MinesweeperBoard.hpp
src/: MinesweeperBoard.cpp  main.cpp
tests/: MinesweeperTests.cpp
